[FIX] Overflow on text

--- a/hicouch_front/src/app/products/components/products-top-recommandation/products-top-recommandation.component.scss
+++ b/hicouch_front/src/app/products/components/products-top-recommandation/products-top-recommandation.component.scss
@@ -18,6 +18,10 @@
       font-weight:bold;
   }
   }
+  :host {
+    height: 98%;
+    overflow: hidden;
+  }
   .content {
     padding: 15px;
     display:flex;
@@ -28,6 +32,7 @@
     .infos {
       display: block;
       padding-left:10px;
+
       .title {
         font-size: 20px;
         margin-bottom: 10px;
