--- a/hicouch_front/src/app/products/product.page.scss
+++ b/hicouch_front/src/app/products/product.page.scss
@@ -15,6 +15,8 @@
     }
     .infos {
       display:block;
+      height: 98%;
+      overflow: hidden;
       .title {
         font-size: 40px;
         margin-top: 20px;
@@ -32,7 +34,7 @@
     margin-left:20px;
     background-color: #ececec;
     border-radius: 10px;
-
+    overflow: hidden;
   }
 
 
